@@ -2885,32 +2885,41 @@ SCIP_RETCODE paramsetSetHeuristicsFast(
 {
    int i;
 
-#define NEXPENSIVEHEURFREQS 19
+   SCIP_HEUR** heurs;
+   int nheurs;
+
+#define NEXPENSIVEHEURFREQS 12
    static const char* const expensiveheurfreqs[NEXPENSIVEHEURFREQS] = {
       "heuristics/coefdiving/freq",
-      "heuristics/crossover/freq",
       "heuristics/distributiondiving/freq",
       "heuristics/feaspump/freq",
       "heuristics/fracdiving/freq",
-      "heuristics/gins/freq",
       "heuristics/guideddiving/freq",
       "heuristics/linesearchdiving/freq",
-      "heuristics/lpface/freq",
-      "heuristics/mpec/freq",
       "heuristics/nlpdiving/freq",
       "heuristics/subnlp/freq",
       "heuristics/objpscostdiving/freq",
       "heuristics/pscostdiving/freq",
-      "heuristics/rens/freq",
-      "heuristics/rins/freq",
       "heuristics/rootsoldiving/freq",
-      "heuristics/undercover/freq",
       "heuristics/veclendiving/freq"
    };
 
    SCIP_CALL( paramsetSetHeuristicsDefault(paramset, set, messagehdlr, quiet) );
 
-   /* explicitly turn off expensive heuristics, if included */
+   /* disable all heuristics that use subSCIPs */
+   heurs = SCIPgetHeurs(set->scip);
+   nheurs = SCIPgetNHeurs(set->scip);
+   for( i = 0; i < nheurs; ++i )
+   {
+      if( SCIPheurUsesSubscip(heurs[i]) )
+      {
+         char paramname[SCIP_MAXSTRLEN];
+         sprintf(paramname, "heuristics/%s/freq", SCIPheurGetName(heurs[i]));
+         SCIP_CALL( paramSetInt(paramset, set, messagehdlr, paramname, -1, quiet) );
+      }
+   }
+
+   /* explicitly turn off further expensive heuristics, if included */
    for( i = 0; i < NEXPENSIVEHEURFREQS; ++i )
       if( SCIPhashtableRetrieve(paramset->hashtable, (void*)expensiveheurfreqs[i]) != NULL )
       {
